<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">app.com.example.android.popularmovies</string>
    <string name="url_poster">http://image.tmdb.org/t/p/.</string>
    <string name="text_no_connection">No connection</string>
    <string name="text_check_internet">Possible internet connection is missing.</string>
    <string name="text_no_favorite">No Favorite Movie</string>
    <string name="text_add_more_favorite">No Favorite Movie. Please Add More Favorite Movie Now</string>
    <string name="show_setting_sort_popular">Popular</string>
    <string name="show_setting_sort_top_rated">Top Rated</string>
    <string name="sort_by_popular">popular</string>
    <string name="sort_by_top_rated">top_rated</string>
    <string name="sort_by_favorite">Favorite</string>
    <string name="sort_by">Sort By</string>
    <string name="shared_order_by"></string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="information_rated">Adult</string>
    <string name="information_in_theaters">In Theaters</string>
    <string name="information_genre">Genre</string>
    <string name="information_director">Director</string>
    <string name="information_cast">Cast</string>
    <string name="information_runtime">Run Time</string>
    <string name="action_share">Share</string>
    <string name="movie_rating">Rating: <xliff:g id="rating">%1$s</xliff:g></string>
    <string name="review">Reviews</string>
    <string name="review_author">Author</string>
    <string name="review_content">Content</string>
    <string name="review_author_name"></string>
    <string name="information">Information</string>
    <string name="empty_movie">No Movie Information Available</string>
    <string name="trailer_text">Trailers</string>
    <string name="review_text">Reviews</string>
    <string name="is_two_pane">isTwoPane</string>
    <string name="toast_trailer_failed">Trailer Fetch Failed</string>
    <string name="toast_review_failed">Review Fetch Failed</string>
</resources>
