<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.com.example.android.popularmovies.MainActivity">
    <item
        android:title="@string/sort_by"
        android:icon="@drawable/ic_action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/menu_sort"
                android:title="Sort By">
                <item android:id="@+id/menu_popluar"
                    android:title="@string/show_setting_sort_popular" />
                <item android:id="@+id/menu_top_rated"
                    android:title="@string/show_setting_sort_top_rated" />
                <item android:id="@+id/menu_favorite"
                    android:title="@string/sort_by_favorite" />
            </group>
        </menu>
    </item>
</menu>
